[gd_scene load_steps=18 format=3 uid="uid://cre4l0mgfr4qn"]

[ext_resource type="Script" path="res://scripts/level1/entities/enemies/normal/enemy/root/enemy.gd" id="1_omge4"]
[ext_resource type="Resource" uid="uid://w2c1qcdhice4" path="res://assets/resources/entitiesStats/enemies/normal/circle/root/circleEnemyStats.tres" id="2_dnsuw"]
[ext_resource type="Shader" uid="uid://sphuqyo4dg12" path="res://assets/images/gameManager/shaders/hit.tres" id="3_jawnp"]
[ext_resource type="Texture2D" uid="uid://dxa4bfw3ckipw" path="res://assets/images/gameManager/entities/enemies/normal/circle/root/circleEnemy.png" id="4_8ech3"]
[ext_resource type="Script" path="res://scripts/level1/components/hitbox/root/hitboxComponent.gd" id="5_8f4j5"]
[ext_resource type="Script" path="res://scripts/level1/components/health/root/healthComponent.gd" id="6_ujjlx"]
[ext_resource type="Script" path="res://scripts/level1/components/health/healthBar/root/healthBarComponent.gd" id="7_urghv"]
[ext_resource type="Script" path="res://scripts/level1/components/navAgent/root/navAgentComponent.gd" id="8_hwbtv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jj71y"]
resource_local_to_scene = true
shader = ExtResource("3_jawnp")
shader_parameter/enabled = false
shader_parameter/tint = Color(0.019608, 0.105882, 0.172549, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_j0uxo"]
radius = 11.25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61a8s"]
bg_color = Color(0.0627451, 0.0745098, 0.137255, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ler3"]
bg_color = Color(0.443137, 0.0980392, 0.0980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.0196078, 0.105882, 0.172549, 1)

[sub_resource type="Animation" id="Animation_3ehs0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_exq26"]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ejlg4"]
resource_name = "areaExited"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_unt87"]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.6, 1.4), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2qu7h"]
_data = {
"RESET": SubResource("Animation_3ehs0"),
"areaEntered": SubResource("Animation_exq26"),
"areaExited": SubResource("Animation_ejlg4"),
"hit": SubResource("Animation_unt87")
}

[node name="circleEnemy" type="CharacterBody2D" groups=["enemies"]]
z_index = 2
scale = Vector2(0.8, 0.8)
collision_layer = 4
collision_mask = 14
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_omge4")
stats = ExtResource("2_dnsuw")

[node name="sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_jj71y")
texture = ExtResource("4_8ech3")

[node name="hitbox" type="Area2D" parent="." node_paths=PackedStringArray("health", "hitAnim")]
collision_layer = 4
script = ExtResource("5_8f4j5")
health = NodePath("../health")
hitAnim = NodePath("../hitAnim")

[node name="col" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_j0uxo")

[node name="health" type="Node2D" parent="." node_paths=PackedStringArray("healthBar")]
script = ExtResource("6_ujjlx")
healthBar = NodePath("../healthBar")

[node name="healthBar" type="ProgressBar" parent="."]
visible = false
offset_left = -13.75
offset_top = 13.75
offset_right = 14.25
offset_bottom = 17.75
pivot_offset = Vector2(13, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_61a8s")
theme_override_styles/fill = SubResource("StyleBoxFlat_4ler3")
max_value = 2.0
value = 1.0
show_percentage = false
script = ExtResource("7_urghv")

[node name="hitAnim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2qu7h")
}

[node name="col" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_j0uxo")

[node name="navAgentComponent" type="NavigationAgent2D" parent="."]
script = ExtResource("8_hwbtv")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="healthUpdated" from="health" to="healthBar" method="_on_health_health_updated"]
